Instructors can now add users to a course

--- a/res/templates/courses/students/list.jinja
+++ b/res/templates/courses/students/list.jinja
@@ -14,4 +14,4 @@ No students found!
 {% endif %}
 
 <a href="{{ url_for('instructor.add_student', course_id=course.id) }}">Add Student</a>
-<a href="{{ url_for('instructor.add_many_students', course_id=course.id) }}">Add Many Students</a>
+<a href="{{ url_for('instructor.add_many_students', course_id=course.id) }}">Add Students From File</a>
