--- a/res/templates/courses/student.jinja
+++ b/res/templates/courses/student.jinja
@@ -2,12 +2,12 @@
 <div class="alert">{{ get_flashed_messages()[0] }}</div>
 {% endif %}
 
-<h1>Courses</h1>
+<h1>Current Courses</h1>
 
 {% if courses %}
 <ul>
 {% for course in courses %}
-	<li>{{ course.name }} <a href="{{ url_for('main.hello') }}">Download Files</a> <a href="{{ url_for('main.hello') }}">Course Info</a> <a href="{{ url_for('main.hello') }}">Workspace</a></li>
+	<li>{{ course.name }} (instructor: {{ course.instructor.name }}) <a href="{{ url_for('main.hello') }}">Download Files</a> <a href="{{ url_for('student.course_info', course_id=course.id) }}">Course Info</a> <a href="{{ url_for('main.hello') }}">Workspace</a></li>
 {% endfor %}
 </ul>
 {% else %}
