--- a/res/templates/workspace.jinja
+++ b/res/templates/workspace.jinja
@@ -8,7 +8,10 @@
     <div class="container">
         <div id="term">
         </div>
-     </div>
+    </div>
+
+    <a href="{{ url_for('workspace.workspace', course_id=course.id) }}">Reboot</a>
+    <a href="{{ url_for('workspace.reset', course_id=course.id) }}">Reset</a>
 
     <script type="application/javascript" src="{{url_for('static', filename='js/jquery.min.js')}}"></script>
     <script type="application/javascript" src="{{url_for('static', filename='js/term.js')}}"></script>
