--- a/res/sass/style.scss
+++ b/res/sass/style.scss
@@ -1,4 +1,4 @@
-.terminal {
+#terminal {
     border: #000 solid 5px;
     font-family: "Monaco", "DejaVu Sans Mono", "Liberation Mono", monospace;
     font-size: 11px;
@@ -7,9 +7,3 @@
     width: 600px;
     box-shadow: rgba(0, 0, 0, 0.8) 2px 2px 20px;
 }
-
-.reverse-video {
-    color: #000;
-    background: #f0f0f0;
-}
-
