--- a/res/templates/workspace.jinja
+++ b/res/templates/workspace.jinja
@@ -14,7 +14,7 @@
     <script type="application/javascript">
         document.onreadystatechange = function() {
             if(document.readyState == 'complete' || document.readyState == 'loaded') {
-                workspace_init(document.getElementById('terminal'), 'ws://localhost:8080/workspace/{{ course.id }}/connect{% if user %}/{{ user.id }}{% endif %}');
+                workspace_init(document.getElementById('terminal'), fix_prefix('{{ url_for("workspace.connect", course_id=course.id, student_id=user.id if user else None, _external=True) }}')); 
             }
         }
     </script>
