Add initial styling

--- a/res/sass/style.scss
+++ b/res/sass/style.scss
@@ -1,3 +1,7 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Source+Code+Pro:400,600);
+
+@import 'layout';
+
 #terminal {
     border: #000 solid 5px;
     font-family: "Monaco", "DejaVu Sans Mono", "Liberation Mono", monospace;
