--- a/res/sass/style.scss
+++ b/res/sass/style.scss
@@ -1,3 +1,4 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Source+Code+Pro:400,600);
 
 @import 'layout';
+@import 'forms';
