--- a/res/templates/form.jinja
+++ b/res/templates/form.jinja
@@ -1,20 +1,38 @@
+{% extends 'base.jinja' %}
+
 {% macro render_field(field) %}
-	{% if field.name != 'csrf_token' %}
-		{{ field.label }}
-		{{ field(**kwargs)|safe }}
-		{% if field.errors %}
-			{% for error in errors %}
-				{{ error }}
-			{% endfor %}
-		{% endif %}
+	{% if field.name != 'csrf_token' and field.name != 'submit' %}
+	<tr>
+		<td class="label-cell">
+			{{ field.label }}
+		</td>
+		<td class="field-cell">
+			{{ field(**kwargs)|safe }}
+
+			{% if field.errors %}
+				{% for error in field.errors %}
+					<div class="error">
+						{{ error }}
+					</div>
+				{% endfor %}
+			{% endif %}
+		</td>
+	</tr>
 	{% endif %}
 {% endmacro %}
 
-
+{% block main %}
 <form method="post"{% if form.file %} enctype="multipart/form-data"{% endif %}>
 	{{ form.csrf_token }}
 
+	<table class="form">
 	{% for field in form %}
 		{{ render_field(field) }}
 	{% endfor %}
+	</table>
+
+	<div class="button-holder">
+		{{ form.submit }}
+	</div>
 </form>
+{% endblock %}
