--- a/res/templates/login.jinja
+++ b/res/templates/login.jinja
@@ -1,15 +1,9 @@
-{% if get_flashed_messages() %}
-<div class="alert">{{ get_flashed_messages()[0] }}</div>
-{% endif %}
+{% extends 'form.jinja' %}
 
-<form method="post">
-	{{ form.csrf_token }}
+{% block main %}
+<h2>Log In</h2>
 
-	{{ form.username.label }}
-	{{ form.username }}
+<p>Enter your username and password to continue. If you aren't sure of your login details, check your email or get in touch with your instructor.</p>
 
-	{{ form.password.label }}
-	{{ form.password }}
-
-	{{ form.submit }}
-</form>
+{{ super() }}
+{% endblock %}
