--- a/res/sass/_colors.scss
+++ b/res/sass/_colors.scss
@@ -1,6 +1,7 @@
 /**
  * Colors via https://www.materialpalette.com/light-blue/indigo
  */
+$background: #F5F5F5;
 
 $primary_main: #03A9F4;
 $primary_dark: #0288D1;
@@ -9,8 +10,12 @@ $primary_light: #B3E5Fc;
 $accent: #536DFE;
 $accent_invert: #AC9201;
 
+$invalid: #da3f32;
+$invalid_light: #e59e99;
+
 $text_primary: 212121;
 $text_secondary: #757575;
+$text_hint: #BDBDBD;
 $text_light: #FFFFFF;
 
 $divider: #BDBDBD;
