--- a/res/templates/user/change_pw.jinja
+++ b/res/templates/user/change_pw.jinja
@@ -1,3 +1,9 @@
-<h1>Change Password</h1>
+{% extends 'form.jinja' %}
 
-{% include 'form.jinja' %}
+{% block main %}
+<h2>Change Password</h2>
+
+<p>Please enter your current password and your new password to proceed.</p>
+
+{{ super() }}
+{% endblock %}
