--- a/res/templates/courses/student.jinja
+++ b/res/templates/courses/student.jinja
@@ -1,15 +1,37 @@
-{% if get_flashed_messages() %}
-<div class="alert">{{ get_flashed_messages()[0] }}</div>
-{% endif %}
+{% extends 'base.jinja' %}
 
-<h1>Current Courses</h1>
+{% block main %}
+<h2>Courses</h2>
+<h3>{{ current_user().name }}</h3>
 
 {% if courses %}
-<ul>
-{% for course in courses %}
-	<li>{{ course.name }} (instructor: {{ course.instructor.name }}) <a href="{{ url_for('student.download_files', course_id=course.id) }}" target="_blank">Download Files</a> <a href="{{ url_for('student.course_info', course_id=course.id) }}">Course Info</a> <a href="{{ url_for('workspace.workspace', course_id=course.id) }}">Workspace</a></li>
-{% endfor %}
-</ul>
+<p>This is a listing of all of the courses you are currently enrolled in.</p>
+
+<table>
+	<thead>
+		<tr>
+			<th style="text-align: left">Course</th>
+			<th colspan="3">Options</th>
+		</tr>
+	</thead>
+	<tbody>
+	{% for course in courses %}
+		<tr>
+			<td class="expand">{{ course.name }} - {{ course.instructor.name }}</td>
+			<td class="compact">
+				<a href="{{ url_for('student.download_files', course_id=course.id) }}" target="_blank">Download Files</a>
+			</td>
+			<td class="compact">
+				<a href="{{ url_for('student.course_info', course_id=course.id) }}">Course Info</a>
+			</td>
+			<td class="compact">
+				<a href="{{ url_for('workspace.workspace', course_id=course.id) }}">Workspace</a>
+			</td>
+		</tr>
+	{% endfor %}
+	</tbody>
+</table>
 {% else %}
-No courses found!
+You are not enrolled in any courses at this time.
 {% endif %}
+{% endblock %}
