--- a/res/templates/form.jinja
+++ b/res/templates/form.jinja
@@ -3,10 +3,10 @@
 {% macro render_field(field) %}
 	{% if field.name != 'csrf_token' and field.name != 'submit' %}
 	<tr>
-		<td class="label-cell">
+		<td class="compact">
 			{{ field.label }}
 		</td>
-		<td class="field-cell">
+		<td class="expand">
 			{{ field(**kwargs)|safe }}
 
 			{% if field.errors %}
@@ -31,7 +31,7 @@
 	{% endfor %}
 	</table>
 
-	<div class="button-holder">
+	<div class="set-right">
 		{{ form.submit }}
 	</div>
 </form>
