--- a/res/sass/workspace.scss
+++ b/res/sass/workspace.scss
@@ -22,7 +22,9 @@
 
 	img {
 		display: block;
-		margin: 8px 4px;
+
+		margin: 8px 0 8px 4px;
+
 		width: 16px; height: 16px;
 	}
 }
@@ -38,7 +40,7 @@
 
 #reset {
 	position: absolute;
-	bottom: 8px;
+	bottom: 12px;
 }
 
 // overriding some xterm.js stuff
