--- a/res/templates/workspace.jinja
+++ b/res/templates/workspace.jinja
@@ -27,6 +27,9 @@ Student
 			<a href="{{ url_for('workspace.workspace', course_id=course.id, student_id=user.id if user else None) }}">
 				<img src="{{ url_for('static', filename='img/restart.png') }}">
 			</a>
+			<a href="{{ url_for('student.download_files', course_id=course.id) }}">
+				<img src="{{ url_for('static', filename='img/download.png') }}">
+			</a>
 			{# should be sufficient as the rest of the ownerships are done
 			   before this template can even be rendered #}
 			{% if not is_instructor() or not user %}
