Add validator for CourseForm, show format for date in CourseForm, and mark required fields with an asterisk

--- a/res/sass/_forms.scss
+++ b/res/sass/_forms.scss
@@ -71,11 +71,13 @@ label {
 	color: $text_secondary;
 }
 
-.error {
+.help, .error {
 	margin: 6px 0;
 	
 	font-size: 12px;
 	text-align: right;
+}
 
+.error {
 	color: $invalid;
 }
