--- a/res/templates/courses/instructor.jinja
+++ b/res/templates/courses/instructor.jinja
@@ -18,7 +18,7 @@
 		<tr>
 			<th style="text-align: left">Course Name</th>
 			<th>Students</th>
-			<th colspan="3">Options</th>
+			<th colspan="4">Options</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -31,6 +31,9 @@
 			</td>
 			<td class="compact">
 				<a href="{{ url_for('instructor.students', course_id=course.id) }}">Students</a>
+			</td>
+			<td class="compact">
+				<a href="{{ url_for('workspace.download_files', course_id=course.id) }}">Download Files</a>
 			</td>
 			<td class="compact">
 				<a href="{{ url_for('workspace.workspace', course_id=course.id) }}">Workspace</a>
