Alternating row colors for tables

--- a/res/sass/_colors.scss
+++ b/res/sass/_colors.scss
@@ -9,6 +9,7 @@ $primary_light: #B3E5Fc;
 
 $accent: #536DFE;
 $accent_invert: #AC9201;
+$accent_row: #EDF0FF;
 
 $invalid: #da3f32;
 $invalid_light: #e59e99;
