--- a/res/templates/base.jinja
+++ b/res/templates/base.jinja
@@ -12,7 +12,7 @@
 	<body>
 		<header>
 			<div class="container">
-				<h1>CoyoteLab</h1>
+				<h1><a href="{{ url_for('main.hello') }}">CoyoteLab</a></h1>
 
 				<nav>
 				{% if authenticated() %}
