Move all email to templates and add links

--- a/res/templates/email/reset_pw.jinja
+++ b/res/templates/email/reset_pw.jinja
@@ -2,4 +2,4 @@
 <br />
 You are receiving this email because you have requested a password reset.<br/>
 <br />
-Your new temporary password is <strong>{{ password }}</strong>. Please log in with your new password to change it.
+Your new temporary password is <strong>{{ password }}</strong>. Please <a href="{{ url }}">log in</a> with your new password to change it.
