Minor text fixes

--- a/res/templates/courses/student.jinja
+++ b/res/templates/courses/student.jinja
@@ -32,6 +32,6 @@
 	</tbody>
 </table>
 {% else %}
-You are not enrolled in any courses at this time.
+<p>You are not enrolled in any courses at this time.</p>
 {% endif %}
 {% endblock %}
